[package]
name = "madome_client"
version = "0.1.0"
authors = ["Lee Tae Woo <syr@meu.works>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["json"] }
tokio = { version = "0.2.22", features = ["full"] }
anyhow = "1.0.32"
bytes = "0.5.6"
async-trait = "0.1.40"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
