[package]
name = "madome_client"
version = "0.4.2"
authors = ["Lee Tae Woo <syr@meu.works>"]
edition = "2018"
description = "Madome Client"
repository = "https://github.com/Project-Madome/Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["json", "blocking"] }
anyhow = "1.0.32"
bytes = "0.5.6"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
mime_guess = "2.0.3"
